--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <p>Durante la quale il test RytmoType aiuta a scoprire il proprio ritmo e a riflettere sulle scelte quotidiane legate alla mobilità.</p>
         </div>
         <div class="single-p-mix">
-            <p class="fotine-title">TEST RITMOTYPE</p>
+            <p class="fotine-title">Test RitmoType</p>
             <img class="fotine" src="./index_media/index_pic_26.webp">
         </div>
         <div class="single-p-mix">
