--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <div class="single-p-mix">
             <p class="fotine-title">Test RitmoType</p>
             <img class="fotine" src="./index_media/index_pic_26.webp">
+            <img class="fotine" src="./index_media/index_pic_27.webp">
         </div>
         <div class="single-p-mix">
             <div class="subtitle-container">EMPOWERMENT</div>
@@ -105,8 +106,9 @@
                 benessere personale, per supportare il pubblico nella trasformazione della consapevolezza in azione concreta.</p>
         </div>
         <div class="single-p-mix">
-            <p class="fotine-title">CONTENUTI INSTAGRAM</p>
+            <p class="fotine-title">Instagram & Spotify</p>
             <img class="fotine" src="./index_media/index_pic_10.webp">
+            <img class="fotine" src="./index_media/index_pic_28.webp">
         </div>
         <div class="single-p-mix">
             <div class="title-container">IDENTITÀ</div>
