--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
         <div class="single-p-mix">
             <p class="fotine-title">Instagram & Spotify</p>
             <img class="fotine" src="./index_media/index_pic_10.webp">
+        </div>
+        <div class="single-p-mix">
             <img class="fotine" src="./index_media/index_pic_28.webp">
         </div>
         <div class="single-p-mix">
