--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="single-p-mix">
             <div class="subtitle-container">CONSAPEVOLEZZA</div>
-            <p>Durante la quale il test RytmoType aiuta a scoprire il proprio ritmo e a riflettere sulle scelte quotidiane legate alla mobilità.</p>
+            <p>In un secondo momento il test RytmoType aiuta a scoprire il proprio ritmo e a riflettere sulle scelte quotidiane legate alla mobilità.</p>
         </div>
         <div class="single-p-mix">
             <p class="fotine-title">Test RitmoType</p>
@@ -102,8 +102,8 @@
         </div>
         <div class="single-p-mix">
             <div class="subtitle-container">EMPOWERMENT</div>
-            <p>Offre strumenti pratici e contenuti di approfondimento attraverso un canale Instagram dedicato, con consigli e spunti sul ritmo e il 
-                benessere personale, per supportare il pubblico nella trasformazione della consapevolezza in azione concreta.</p>
+            <p>Infine Syncro offre strumenti pratici e contenuti di approfondimento attraverso un canale Instagram dedicato, con consigli e spunti sul ritmo e il 
+                benessere personale, per supportare il pubblico nella trasformazione della consapevolezza in azione concreta, il tutto con la possibilità di ascoltare la propria StopList.</p>
         </div>
         <div class="single-p-mix">
             <p class="fotine-title">Instagram & Spotify</p>
