--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
         <div class="single-p-mix">
             <div class="btn-container">
-                <button class="btn" onclick="downloadReport()">scarica il report</button>
+                <button class="btn" onclick="downloadReport()">Scarica il report</button>
             </div>
         </div>
         <div class="single-p-mix">
@@ -200,8 +200,8 @@
         </div>
         <div class="download-container">
             <div class="btn-container">
-                <button class="btn btn-expl" onclick="openTest()">fai il test</button>
-                <button class="btn btn-expl" onclick="openRitmario()">esplora i ritmotype</button>
+                <button class="btn btn-expl" onclick="openTest()">Fai il test</button>
+                <button class="btn btn-expl" onclick="openRitmario()">Esplora i RitmoType</button>
             </div>
         </div>
         <div class="single-p-mix">
